--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Minecraft迷上城建</title>
   <style>
+    /* 更稳妥的中文字体回退顺序，兼容常见系统 */
     body {
-      font-family: '微软雅黑', 'Arial', sans-serif;
+      font-family: "Microsoft YaHei", "微软雅黑", "PingFang SC", "Hiragino Sans GB", "Noto Sans SC", "WenQuanYi Micro Hei", Arial, sans-serif;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
       background: #fff;
       margin: 0;
       padding: 0;
