--- a/index.html
+++ b/index.html
@@ -49,24 +49,37 @@
     .nav a.bao { color: #C04F15; }
     .nav a.spruce { color: #215F9A; }
 
-    /* 彩虹文本及缩放动画 */
+    /* 彩虹文本：流动的渐变 + 更快的速度 + 左倾斜 22.5 度 + 缓进缓出放大缩小 */
     .rainbow {
       display: inline-block;
       margin-top: 10px;
       font-size: 28px;
       font-weight: bold;
+      /* 以线性渐变作为文字颜色的底图，并设置足够的背景尺寸以便流动 */
       background: linear-gradient(90deg, #ff0000, #ff7f00, #ffff00, #00ff00, #00ffff, #0000ff, #8b00ff);
+      background-size: 200% 100%;
+      background-position: 0% 50%;
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
       transform-origin: center center;
-      animation: pulse 3s ease-in-out infinite;
+      /* 基本为左倾斜 22.5 度 (逆时针) */
+      transform: rotate(-22.5deg) scale(1);
+      /* 两个动画：一个用于背景流动（更快），另一个用于缓进缓出放大缩小 */
+      animation: flow 1.2s linear infinite, pulse 2s ease-in-out infinite;
     }
 
+    /* 背景流动动画：从左到右，循环 */
+    @keyframes flow {
+      0%   { background-position: 0% 50%; }
+      100% { background-position: 100% 50%; }
+    }
+
+    /* 缓进缓出放大缩小，同时保持旋转角度不变 */
     @keyframes pulse {
-      0%   { transform: scale(1);   opacity: 0.85; }
-      50%  { transform: scale(1.25); opacity: 1; }
-      100% { transform: scale(1);   opacity: 0.85; }
+      0%   { transform: rotate(-22.5deg) scale(1);   opacity: 0.85; }
+      50%  { transform: rotate(-22.5deg) scale(1.25); opacity: 1; }
+      100% { transform: rotate(-22.5deg) scale(1);   opacity: 0.85; }
     }
   </style>
 </head>
