--- a/Ini.html
+++ b/Ini.html
@@ -111,13 +111,13 @@
   <div class="app" id="app">
     <aside class="sidebar" id="sidebar" aria-label="侧边导航">
       <div class="search">
-        <input id="search" placeholder="搜索（临时禁用）" aria-label="搜索"/>
+        <input id="search" placeholder="搜索" aria-label="搜索"/>
       </div>
 
       <ul class="nav-list" id="navList">
-        <li class="nav-item" data-id="content-1" tabindex="0"><div class="nav-icon" aria-hidden="true">城</div><div class="nav-title">迷上城建</div></li>
-        <li class="nav-item" data-id="content-2" tabindex="0"><div class="nav-icon" aria-hidden="true">轨</div><div class="nav-title">迷上轨道交通</div></li>
-        <li class="nav-item" data-id="content-3" tabindex="0"><div class="nav-icon" aria-hidden="true">星</div><div class="nav-title">天河星制片厂</div></li>
+        <li class="nav-item" data-id="content-1" tabindex="0"><div class="nav-icon" aria-hidden="true">MS</div><div class="nav-title">迷上城建</div></li>
+        <li class="nav-item" data-id="content-2" tabindex="0"><div class="nav-icon" aria-hidden="true">MG</div><div class="nav-title">迷上轨道交通</div></li>
+        <li class="nav-item" data-id="content-3" tabindex="0"><div class="nav-icon" aria-hidden="true">MT</div><div class="nav-title">天河星制片厂</div></li>
 
         <li class="dropdown" id="moreDropdown" aria-expanded="false">
           <div class="dropdown-toggle" id="moreToggle" tabindex="0" role="button" aria-controls="moreList" aria-expanded="false">
@@ -128,10 +128,10 @@
             </div>
           </div>
           <div class="dropdown-list" id="moreList" role="menu" aria-hidden="true">
-            <div class="sub-item" data-id="content-more-1" tabindex="0"><div class="nav-icon">福</div><div class="nav-title">福〇福咒</div></div>
-            <div class="sub-item" data-id="content-more-2" tabindex="0"><div class="nav-icon">奶</div><div class="nav-title">老马奶茶店</div></div>
-            <div class="sub-item" data-id="content-more-3" tabindex="0"><div class="nav-icon">火</div><div class="nav-title">爆辣火锅店</div></div>
-            <div class="sub-item" data-id="content-more-4" tabindex="0"><div class="nav-icon">机</div><div class="nav-title">几维印制机器</div></div>
+            <div class="sub-item" data-id="content-more-1" tabindex="0"><div class="nav-icon">F</div><div class="nav-title">福〇福咒</div></div>
+            <div class="sub-item" data-id="content-more-2" tabindex="0"><div class="nav-icon">L</div><div class="nav-title">老马奶茶店</div></div>
+            <div class="sub-item" data-id="content-more-3" tabindex="0"><div class="nav-icon">B</div><div class="nav-title">爆辣火锅店</div></div>
+            <div class="sub-item" data-id="content-more-4" tabindex="0"><div class="nav-icon">J</div><div class="nav-title">几维印制机器</div></div>
           </div>
         </li>
 
@@ -142,7 +142,7 @@
     <main class="content" aria-live="polite">
       <section class="detail" id="detail">
         <div id="detailBody" class="content-body">
-          <p class="content-paragraph">点击一个查看详细信息（点击“迷上城建”会显示完整内容）。</p>
+          <p class="content-paragraph">点击一个查看详细信息</p>
         </div>
       </section>
     </main>
