--- a/Ini.html
+++ b/Ini.html
@@ -230,7 +230,33 @@
   </template>
 
   <template id="content-4"><h3 class="content-title">小彩蛋</h3><p class="content-paragraph">（彩蛋内容）</p></template>
-  <template id="content-more-1"><h3 class="content-title">福〇福咒</h3><p class="content-paragraph">（空）</p></template>
+  <template id="content-more-1"><h3 class="content-title">福〇福咒</h3><p class="content-paragraph"><template id="content-more-1">
+  <article>
+    <h3 class="content-title">福〇福咒</h3>
+    
+    <p class="content-paragraph">
+      福〇福咒始于2020年，一开始由梁小川创办，现在由我支配
+    </p>
+
+    <div class="info-row" role="group" aria-label="提示">
+      <div class="info-icon" aria-hidden="true">💡</div>
+      <div style="flex:1;min-width:0">
+        <p class="content-paragraph" style="margin-bottom:6px;">
+          你知道吗：一开始我们叫他福<span class="hidden-black" tabindex="0" role="note" aria-label="隐藏信息">偶</span>福咒[Doge]
+        </p>
+
+        <p class="content-paragraph" style="margin-top:12px;">
+          福咒是什么？
+        </p>
+        
+        <p class="content-paragraph" style="font-size:14px;">
+          黄色的纸上面画着不知道的东西，粘在头上。
+          <span class="hidden-black" tabindex="0" role="note" aria-label="隐藏信息">其实我也不知道是什么[Doge]</span>
+        </p>
+      </div>
+    </div>
+  </article>
+</template></p></template>
   <template id="content-more-2"><h3 class="content-title">老马奶茶店</h3><p class="content-paragraph">（空）</p></template>
   <template id="content-more-3"><h3 class="content-title">爆辣火锅店</h3><p class="content-paragraph">（空）</p></template>
   <template id="content-more-4"><h3 class="content-title">几维印制机器</h3><p class="content-paragraph">（空）</p></template>
