--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Minecraft迷上城建</title>
+  <title>Minecraft迷上城建(不是模组！)</title>
   <style>
     /* 基础样式 */
     :root {
