--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
   <footer>
     <div class="footer-content">
       <p>© 2026 Minecraft迷上城建 | 保留所有权利</p>
-      <p style="margin-top: 10px; font-size: 14px; opacity: 0.8;">联系我们: example@msc.com</p>
+      <p style="margin-top: 10px; font-size: 14px; opacity: 0.8;">联系我们: woquwanleo@outlook.com</p>
     </div>
   </footer>
 
